--- a/index.css
+++ b/index.css
@@ -9,7 +9,7 @@ html{
 
 body{
     background: #EDEBE9;
-    padding: 100px;
+    padding: 20px 100px 20px;
     
 }
 
@@ -26,8 +26,72 @@ body{
     margin-left: auto;
     margin-right: auto;
     margin-top: 10px;
-    width: 400px;
-    padding: 18px;
+    width: 350px;
+    padding: 30px;
     border-radius: 3px;
     background: #fff;
+}
+
+.signin-logo{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+
+.signin-title{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+}
+.signin-title h2 {
+    padding: 0;
+    margin: 0;
+    display: block;
+}
+
+.signin-container{
+    padding-top: 20px;
+  
+}
+
+.signin-input input{
+    width: 100%;
+    height: 50px;
+    outline: none;
+    border: none;
+    background: #EDEBE9;
+    position: relative;
+    box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    border-radius: px;
+}
+
+input[type=email] {
+    padding-left: 10px;
+    flex: none;
+
+}
+
+.btn button{
+    margin-top: 13px;
+    width: 100%;
+    height: 50px;
+    border: none;
+    background: #EDEBE9;
+    outline: none;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    color: rgb(189, 189, 189);
+  
+}
+
+.classed {
+    border-bottom: 2px solid #5255B0 !important;
+}
+
+.validate{
+    background: #5255B0 !important;
+    color: #fff !important;
 }
