--- a/index.css
+++ b/index.css
@@ -30,6 +30,7 @@ body{
     padding: 30px;
     border-radius: 3px;
     background: #fff;
+    box-shadow: 0 10px 10px 0 rgba(153, 153, 153, 0.19), 0 5px 10px 0 rgba(138, 138, 138, 0.24);
 }
 
 .signin-logo{
@@ -84,6 +85,7 @@ input[type=email] {
     font-size: 16px;
     font-weight: 500;
     color: rgb(189, 189, 189);
+
   
 }
 
@@ -111,5 +113,12 @@ input[type=email] {
     background: #fff;
     color: #4d4d4d;
     font-weight: 600;
+    box-shadow: 0 10px 10px 0 rgb(189, 189, 189, 0.19), 0 5px 10px 0 rgba(189, 189, 189, 0.24);
 
+
+}
+
+.teams-details{
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
